istioctl/pkg/analyze/testdata/analyze-file/specific-analyzer.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: beta
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "foo.bar"
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: alpha
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "bar.bar"
